# marty-mic-fly

./: .gitignore  FliegendesMessMikrofon_Projektbeschreibung.md  daq.py  esc_throttle_set.py  pyproject.toml  visualize_data.py
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
analysis/: spectral_comparison.py
configs/: example_compose.yaml  example_notch.yaml  example_pipeline.yaml
docs/superpowers/: handoff-stage2.md  handoff-stage3.md
docs/superpowers/plans/: 2026-04-28-ap2a-stage1-notch-plan.md  2026-04-28-ap2a-stage2-array-deconv-plan.md
docs/superpowers/specs/: 2026-04-28-ap2a-stage1-notch-design.md  2026-04-28-ap2a-stage2-array-deconv-design.md
rpm_monitoring/: esc_throttle_set.py  kiss_tel_multi_esc_monitor.py
src/martymicfly/: __init__.py  config.py  constants.py
src/martymicfly/cli/: run_notch.py  run_pipeline.py
src/martymicfly/eval/: array_metrics.py  array_plots.py  metrics.py  plots.py
src/martymicfly/io/: ground_truth_h5.py  mic_geom.py  residual_csm_h5.py  source_artifact.py  synth_h5.py  write_filtered.py
src/martymicfly/processing/: __init__.py  array_filter.py  beamform_grid.py  csm.py  frequencies.py  notch.py  pipeline.py  sources.py  (+1 more)
tests/: conftest.py  test_algorithm_base.py  test_array_filter.py  test_array_metrics.py  test_array_plots.py  test_beamform_grid.py  test_clean_sc_algorithm.py  test_compose_cli.py  test_compose_external.py  test_config.py  test_constants.py  test_csm.py  test_external_source.py  test_frequencies.py  test_io_ground_truth.py  test_io_mic_geom.py  test_io_residual_csm.py  test_io_source_artifact.py  test_io_synth_h5.py  test_metrics.py  test_notch_stage.py  test_pipeline_e2e_array.py  test_pipeline_integration.py  test_pipeline_skeleton.py  test_plots.py  test_propagation.py  test_sources.py  test_steering.py  test_write_filtered.py
tests/fixtures/: make_tiny_compose.py  make_tiny_drone_artifact.py  make_tiny_synth.py  tiny_drone_artifact.h5  tiny_geom.xml  tiny_geom_4mic.xml  tiny_gt.h5  tiny_synth.h5  tiny_synth_mixed.h5
(+7 files in other folders)
