[project]
name = "martymicfly"
version = "0.1.0"
description = "Git repo for all things code related to the DFG Project 'Fliegendes Messmikrofon' (working title: MaryMicFly)"
requires-python = ">=3.13,<3.14"
dependencies = [
    "acoular>=24.11",
    "drone-synthdata",
    "h5py>=3.15.1",
    "ipython>=9.6.0",
    "matplotlib>=3.10.7",
    "notchfilter",
    "numpy>=2.3.4",
    "pandas>=2.2.0",
    "paramiko==4.0.0",
    "pigpio==1.78",
    "plotly>=5.24.0",
    "pydantic>=2",
    "pyserial>=3.5",
    "pyyaml==6.0.3",
    "scipy>=1.15,!=1.16.0,!=1.16.1,!=1.16.2,!=1.16.3",
    "scipy-stubs>=1.15.3",
    "sounddevice>=0.5.3",
    "soundfile==0.13.1",
]

[tool.uv.sources]
notchfilter = { path = "../NotchFilter", editable = true }
drone-synthdata = { path = "../drone_synthdata", editable = true }

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.uv]
override-dependencies = [
    "acoular==26.1",
    "ipython>=9.12",
    "scipy-stubs>=1.17.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/martymicfly"]
